--- a/cssmodule.css
+++ b/cssmodule.css
@@ -50,6 +50,7 @@ body {
     margin: 0;
 }
 
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -144,4 +145,61 @@ input[type=text].search-quiz {
 table{
     width: 100%;
 
+}
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 480px) {
+    ul{
+        display:none;
+    }
+
+    .mobilenav {
+  overflow: hidden;
+  background-color: #333;
+  position: relative;
+  left: 0;
+  top: 0;
+  display: block;
+  width:100%;
+}
+
+.mobilenav #mobileLinks {
+  display: none;
+}
+
+.mobilenav a[for=mobilenav] {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+  text-align: left;
+}
+
+.mobilenav a[for=mobilenav]:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.showing {
+  background-color: #4CAF50;
+  color: white;
+
+}
+
+}
+
+
+@media screen and (min-width: 480px) {
+    .mobilenav{
+        display:none;
+    }
 }
