--- a/UI/cssmodule.css
+++ b/UI/cssmodule.css
@@ -9,6 +9,7 @@
 	border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
+    overflow: auto;
 }
 
 .input-panel[for=signup]{
@@ -160,6 +161,22 @@ table{
     ul{
         display:none;
     }
+
+    .large-scrollable-content{
+        margin-left: 0;
+    }
+
+    .input-panel, .input-panel[for=signup]{
+        left:0;
+        width: 100%;
+        top:10%;
+        height:auto;
+    }
+
+
+
+
+
 
     .mobilenav {
   overflow: hidden;
